<resources>
    <string name="app_name">Auriga IT Demo</string>
    <string name="logout">Logout</string>
    <string name="demo_project">Demo Project</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="description">Description</string>
    <string name="movie">Movie</string>
    <string name="rating">Rating</string>
</resources>